crates/rome_cli/tests/snapshots/main_commands_format/applies_custom_arrow_parentheses.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
action => {};
action => {};
({ action }) => {};
([action]) => {};
(...action) => {};
(action = 1) => {};

```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


