crates/rome_cli/tests/snapshots/main_commands_format/applies_custom_configuration.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
function f() {
        return {
                a,
                b,
        };
}

```

# Emitted Messages

```block
Formatted 1 file(s) in 10ms
```


