crates/rome_cli/tests/snapshots/main_commands_format/applies_custom_configuration_over_config_file.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "enabled": true,
    "lineWidth": 160,
    "indentStyle": "space",
    "indentSize": 6
  }
}

```

## `file.js`

```js
function f() {
        return {
                a,
                b,
        };
}

```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


