crates/rome_cli/tests/snapshots/main_commands_format/applies_custom_jsx_quote_style.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
<div bar='foo' baz={"foo"} />;

```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


