crates/rome_cli/tests/snapshots/main_commands_format/applies_custom_quote_style.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
let a = 'something';
let b = {
	'hey': 'hello',
};

```

# Emitted Messages

```block
Formatted 1 file(s) in 14ms
```


