crates/rome_cli/tests/snapshots/main_commands_format/custom_config_file_path.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 335
expression: content
---
## `/test/rome.json`

```json
{
  "formatter": {
    "enabled": true,
    "lineWidth": 160,
    "indentStyle": "space",
    "indentSize": 6
  }
}

```

## `file.js`

```js
function f() {
      return { a, b };
}

```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


