crates/rome_cli/tests/snapshots/main_commands_format/does_not_format_ignored_directories.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
	"formatter": {
		"ignore": ["scripts/*"]
	}
}

```

## `scripts/test.js`

```js
  statement(  )  
```

## `src/test.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 2 file(s) in <TIME>
```


